--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="./script.js"></script>
     <title>To Do App</title>
 </head>
-<body>
-    <h1>Hiiiiii</h1>
+
+<body class="justify-center items-center flex text-center">
+    <div class="container h-screen p-12">
+        <div class="taskcreationbox">
+            <h2>hi</h2>
+        </div>
+        <div class="tasksbox">
+        </div>
+    </div>
 </body>
+
 </html>
