--- a/index.html
+++ b/index.html
@@ -16,9 +16,19 @@
 </head>
 
 <body>
-    <div class="justify-center items-center flex text-center flex-col w-screen h-screen">
+    <div class="justify-center items-center flex text-center">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-fill"
+            viewBox="0 0 16 16">
+            <path
+                d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V5h16V4H0V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5" />
+        </svg>
         <div class="datetime" id="datetime"></div>
-        <!-- <form onsubmit="return false;" class="flex flex-col">
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-alarm-fill" viewBox="0 0 16 16">
+            <path d="M6 .5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1H9v1.07a7.001 7.001 0 0 1 3.274 12.474l.601.602a.5.5 0 0 1-.707.708l-.746-.746A6.97 6.97 0 0 1 8 16a6.97 6.97 0 0 1-3.422-.892l-.746.746a.5.5 0 0 1-.707-.708l.602-.602A7.001 7.001 0 0 1 7 2.07V1h-.5A.5.5 0 0 1 6 .5m2.5 5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9zM.86 5.387A2.5 2.5 0 1 1 4.387 1.86 8.04 8.04 0 0 0 .86 5.387M11.613 1.86a2.5 2.5 0 1 1 3.527 3.527 8.04 8.04 0 0 0-3.527-3.527"/>
+        </svg>
+    </div>
+    <!-- <div class="justify-center items-center flex text-center flex-col w-screen h-screen">
+        <form onsubmit="return false;" class="flex flex-col">
             <label class="p-3" for="title">Title:</label>
             <input class="text-center rounded-xl" type="text" id="title" placeholder="Title">
             <label class="p-3" for="description">Description:</label>
@@ -40,13 +50,15 @@
                 <button id="saveEditButton" onclick="saveEdit()">Save</button>
             </div>
         </div> -->
-        <div class="footer">
-            <div class="addTask justify-center items-center flex text-center w-24 h-24 shadow-lg shadow-indigo-500/40">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
-                </svg>
-            </div>
+    <div class="footer">
+        <div class="addTask justify-center items-center flex text-center w-24 h-24 shadow-lg shadow-indigo-500/40">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-plus-lg"
+                viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2" />
+            </svg>
         </div>
+    </div>
     </div>
 </body>
 
