--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 </head>
 
 <body>
-    <div class="justify-center items-center flex text-center flex-col">
-        <div class="toDoAppLogo flex items-center">
-            <h1>To Do App</h1>
-            <svg class="m-2" xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
-                class="bi bi-calendar-check-fill" viewBox="0 0 16 16">
-                <path
-                    d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2m-5.146-5.146-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708.708" />
-            </svg>
-        </div>
+    <div class="toDoAppLogo flex justify-center items-center flex">
+        <h1>To Do App</h1>
+        <svg class="m-2" xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+        class="bi bi-calendar-check-fill" viewBox="0 0 16 16">
+        <path
+        d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2m-5.146-5.146-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708.708" />
+    </svg>
+</div>
+<!-- <div class="p-3 text-center flex-col">
         <div class="wrapper">
             <header>
                 <div class="icons">
@@ -49,10 +49,10 @@
                 <ul class="days"></ul>
             </div>
         </div>
-    </div>
-    <div id="myModal" class="modal">
-        <div id="modalContent" class="modal-content"></div>
-    </div>
+        <div id="myModal" class="modal">
+            <div id="modalContent" class="modal-content"></div>
+        </div>
+    </div> -->
     <div class="footer">
         <div class="addTask justify-center items-center flex text-center w-20 h-20 shadow-lg shadow-indigo-500/40">
             <button class="addTodoButton" onclick="openToDoForm(new Date())"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-plus-lg"
