--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -14,6 +13,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <script defer src="./script.js"></script>
+    <script defer src="./time.js"></script>
+    <link rel="stylesheet" href="./style.css">
     <title>To Do App</title>
 </head>
 
@@ -21,12 +22,12 @@
     <div class="toDoAppLogo flex justify-center items-center flex">
         <h1>To Do App</h1>
         <svg class="m-2" xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
-        class="bi bi-calendar-check-fill" viewBox="0 0 16 16">
-        <path
-        d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2m-5.146-5.146-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708.708" />
-    </svg>
-</div>
-<!-- <div class="p-3 text-center flex-col">
+            class="bi bi-calendar-check-fill" viewBox="0 0 16 16">
+            <path
+                d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2m-5.146-5.146-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708.708" />
+        </svg>
+    </div>
+    <div class="p-3 text-center flex-col">
         <div class="wrapper">
             <header>
                 <div class="icons">
@@ -49,17 +50,44 @@
                 <ul class="days"></ul>
             </div>
         </div>
-        <div id="myModal" class="modal">
-            <div id="modalContent" class="modal-content"></div>
+
+    </div>
+    <div class="justify-around items-center flex text-center flex-wrap">
+        <div class="taskList justify-center">
+            <ul data-lists></ul>
+            <form class="p-2" action="" data-new-list-form>
+                <input type="text" class="addList text-center" data-new-list-input placeholder="Add List Name">
+                <div class="flex justify-center">
+                    <button class="btns"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                            fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z" />
+                        </svg></button>
+                    <button class="btns" data-delete-list-button><svg xmlns="http://www.w3.org/2000/svg" width="26"
+                            height="26" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5" />
+                        </svg></button>
+                </div>
+            </form>
         </div>
-    </div> -->
+        <div class="todoList" data-list-display-container>
+            <div class="todoHeader">
+                <h2 class="listTitle" data-list-title></h2>
+                <h5 class="taskCount" data-list-count></h5>
+            </div>
+            <div class="todoBody">
+                <div class="tasks" data-tasks></div>
+            </div>
+        </div>
+    </div>
     <div class="footer">
         <div class="addTask justify-center items-center flex text-center w-20 h-20 shadow-lg shadow-indigo-500/40">
-            <button class="addTodoButton" onclick="openToDoForm(new Date())"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-plus-lg"
-                viewBox="0 0 16 16">
-                <path fill-rule="evenodd"
-                    d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2" />
-            </svg></button>
+            <button class="addTodoButton" onclick="openToDoForm(new Date())"><svg xmlns="http://www.w3.org/2000/svg"
+                    width="50" height="50" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2" />
+                </svg></button>
         </div>
     </div>
 </body>
