--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
                 <ul class="days"></ul>
             </div>
         </div>
-
     </div>
     <div class="justify-around items-center flex text-center flex-wrap">
         <div class="taskList justify-center">
@@ -73,8 +72,8 @@
         </div>
         <div class="todoList" data-list-display-container>
             <div class="todoHeader">
-                <h2 class="listTitle" data-list-title></h2>
-                <h5 class="taskCount" data-list-count></h5>
+                <h1 class="text-3xl p-1 m-1" data-list-title></h1>
+                <h4 class="text-2xl p-2 m-1" data-list-count></h4>
             </div>
             <div class="todoBody">
                 <div class="tasks" data-tasks></div>
