--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     </div>
     <div class="justify-around items-center flex text-center flex-wrap">
         <div class="taskList justify-center">
+            <h1 class="text-5xl underline-offset-8">My Lists</h1>
             <ul data-lists></ul>
             <form class="p-2" action="" data-new-list-form>
                 <input type="text" class="addList text-center" data-new-list-input placeholder="Add List Name">
@@ -72,7 +73,7 @@
         </div>
         <div class="todoList" data-list-display-container>
             <div class="todoHeader">
-                <h1 class="text-3xl p-1 m-1" data-list-title></h1>
+                <h1 class="text-5xl p-1 m-1  underline-offset-8" data-list-title></h1>
                 <h4 class="text-2xl p-2 m-1" data-list-count></h4>
             </div>
             <div class="todoBody">
