--- a/index.html
+++ b/index.html
@@ -51,55 +51,70 @@
             </div>
         </div>
     </div>
-    <div class="justify-around items-center flex text-center flex-wrap">
-        <div class="taskList justify-center">
-            <h1 class="text-5xl underline-offset-8">My Lists</h1>
-            <ul data-lists></ul>
-            <form class="p-2" action="" data-new-list-form>
-                <input type="text" class="addList text-center" data-new-list-input placeholder="Add List Name">
-                <div class="flex justify-center">
-                    <button class="btns"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-                            fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
-                            <path
-                                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z" />
-                        </svg></button>
-                    <button class="btns" data-delete-list-button><svg xmlns="http://www.w3.org/2000/svg" width="26"
-                            height="26" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
-                            <path
-                                d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5" />
-                        </svg></button>
-                </div>
-            </form>
-        </div>
-        <div class="todoList" data-list-display-container>
-            <div class="todoHeader">
-                <h1 class="text-5xl p-1 m-1  underline-offset-8" data-list-title></h1>
-                <h4 class="text-2xl p-2 m-1" data-list-count></h4>
+    <div class="h-screen">
+        <div class="justify-around flex text-center flex-wrap">
+            <div class="taskList justify-center">
+                <h1 class="text-5xl underline-offset-8">My Lists</h1>
+                <ul data-lists></ul>
+                <form class="p-2" action="" data-new-list-form>
+                    <input type="text" class="addList text-center" data-new-list-input placeholder="Add A List">
+                    <div class="flex justify-center">
+                        <button class="btns"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                                fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z" />
+                            </svg></button>
+                        <button class="btns" data-delete-list-button><svg xmlns="http://www.w3.org/2000/svg" width="26"
+                                height="26" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5" />
+                            </svg></button>
+                    </div>
+                </form>
             </div>
-            <div class="todobody">
-                <div class="tasks" data-tasks></div>
-                <div class="new-task-creator">
-                    <form action="" data-new-task-form>
-                        <input type="text" data-new-task-input class="new task" placeholder="new task name"
-                            aria-label="new task name" />
-                        <button class="btn create" aria-label="create new task">+</button>
-                    </form>
+            <div class="todoList" data-list-display-container>
+                <div class="todoHeader">
+                    <h1 class="text-5xl p-1 m-1  underline-offset-8" data-list-title></h1>
+                    <h4 class="text-2xl p-2 m-1" data-list-count></h4>
                 </div>
-                <div class="delete-stuff">
-                    <button class="btn delete" data-clear-complete-tasks-button>Clear completed tasks</button>
-                    <button class="btn delete" data-delete-list-button>Delete list</button>
+                <div class="todobody">
+                    <div class="tasks m-3" data-tasks></div>
+                    <div class="new-task-creator">
+                        <form action="" data-new-task-form>
+                            <input type="text" data-new-task-input class="addList text-center" placeholder="Add Task"
+                                aria-label="new task name" />
+                        </form>
+                    </div>
+                    <div class="delete-stuff flex justify-center">
+                        <button class="btns"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                                fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z" />
+                            </svg></button>
+                        <button class="btns delete" data-clear-complete-tasks-button><svg
+                                xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                                class="bi bi-x-circle-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z" />
+                            </svg></button>
+                        <button class="btns" data-delete-list-button><svg xmlns="http://www.w3.org/2000/svg" width="26"
+                                height="26" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5" />
+                            </svg></button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="footer">
-        <div class="addTask justify-center items-center flex text-center w-20 h-20 shadow-lg shadow-indigo-500/40">
+        <!-- <div class="addTask justify-center items-center flex text-center w-20 h-20 shadow-lg shadow-indigo-500/40">
             <button class="addTodoButton" onclick="openToDoForm(new Date())"><svg xmlns="http://www.w3.org/2000/svg"
                     width="50" height="50" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
                         d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2" />
                 </svg></button>
-        </div>
+        </div> -->
     </div>
 </body>
 
